Fixe horz font spacing

--- a/themes/GCI/scr/scss/base.scss
+++ b/themes/GCI/scr/scss/base.scss
@@ -2,7 +2,9 @@ body {
   background-color: $white;
 }
 
-
+body.modal-opened {
+  overflow:hidden;
+}
 
 .title {
   color: $primary;
