--- a/themes/GCI/scr/scss/partials/nav.scss
+++ b/themes/GCI/scr/scss/partials/nav.scss
@@ -15,13 +15,15 @@
   font-size: 1rem;
 
   @include media-breakpoint-down(md) {
-    font-size: 3vh;
+    font-size: 3.5vh;
 
   }
 
   @include media-breakpoint-up(xl) {
     font-size: 1.5rem;
   }
+
+
 }
 
 .nav-link:hover {
